--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     type="png"
     href="./images/images.png"
     >
-
+    <script src="https://kit.fontawesome.com/419f67953a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -21,14 +21,12 @@
     </div>
     <div class="container">
         <div class="top-block">
-            <button class="header-burger-button" type = "button">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="32" height="32" rx="10" fill="#BBB7B7"/>
-                    <rect x="5" y="13" width="22" height="5.81818" rx="2.90909" fill="#D9D9D9"/>
-                    <rect x="5" y="5" width="22" height="6" rx="3" fill="#D9D9D9"/>
-                    <rect x="5" y="21" width="22" height="6" rx="3" fill="#D9D9D9"/>
-                    </svg>      
-            </button>
+            <div class="search-box">
+                <input type="text" class="search-txt" placeholder="Найти модуль">
+                <a href="#" class="search-btn">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </div>
         </div>
         
         <div class="bottom-block">
