--- a/index.html
+++ b/index.html
@@ -45,8 +45,20 @@
                 <div class="module-learned">
                     <div class="module-learned-txt">Карточек 0</div>
                     <div class="module-learned-percent">0<br>%</div>
-                    <div class="module-learned-bar"></div>
+                    <div class="module-learned-bar">
+                        <progress value="30" max="100"></progress>
+                    </div>
                 </div>
+                <button class="menu-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512">
+                        <path d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z" fill="#ACA8A8"/>
+                    </svg>
+                    
+                  </button>
+                  <div class="dropdown-menu">
+                    <a href="#" class="menu-item">Поделиться</a>
+                    <a href="#" class="menu-item">Удалить</a>
+                  </div>
             </div>
         </div>
     </div>
