--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="left-block">
             <a class="header-link" href="/">
                 <span class="green-text">Quiz</span>
-                <span class="gray-text">RuLet</span>
+                <span class="grey-text">RuLet</span>
             </a>
     </div>
     <div class="container">
