--- a/registration.html
+++ b/registration.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация</title>
+    <title>Создание аккаунта - QuizRuLet</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/419f67953a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/styles.css">
-
     <link rel="stylesheet" href="./styles/registration.css">
-    <link rel="site icon"
-    type="png"
-    href="./images/images.png">
-</head>
-<body>
-    <div class="quizrulet">
-        <span class="green-text">Quiz</span>
-        <span class="grey-text">RuLet</span>
+    </head>
+<body class="d-flex flex-column align-items-center justify-content-center">
+
+    <div class="quizrulet-brand text-center">
+        <span class="text-success">Quiz</span><span class="text-secondary">RuLet</span>
     </div>
-    <div class="register">
-        <form>
-            <h1>Создание аккаунта</h1>
-            <div class="login">    
-                <label>Логин:</label> <input type="text">
-            </div>
-            <div class="password">
-                <label>Пароль:</label> <input type="password">
-            </div>
-            <div class="pass_again">
-                <input type="password">
-            </div>
-            <button>Создать аккаунт</button>
-            
-        </form>
+
+    <div class="card shadow-lg" style="max-width: 500px; width: 90%;">
+        <div class="card-body p-4 p-md-5">
+            <h1 class="card-title text-center h3 mb-4">Создание аккаунта</h1>
+            <form>
+                <div class="mb-3">
+                    <label for="loginInput" class="form-label">Логин:</label>
+                    <input type="text" class="form-control form-control-lg" id="loginInput" placeholder="Придумайте логин">
+                </div>
+                <div class="mb-3">
+                    <label for="passwordInput" class="form-label">Пароль:</label>
+                    <input type="password" class="form-control form-control-lg" id="passwordInput" placeholder="Придумайте пароль">
+                </div>
+                <div class="mb-4">
+                    <label for="passwordConfirmInput" class="form-label">Повторите пароль:</label>
+                    <input type="password" class="form-control form-control-lg" id="passwordConfirmInput" placeholder="Повторите пароль">
+                </div>
+                <button type="submit" class="btn btn-custom-register w-100 btn-lg mb-3">Создать аккаунт</button>
+                 <div class="text-center login-link">
+                    <a href="login.html">Уже есть аккаунт? Войти</a>
+                </div>
+            </form>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
