--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-
-
-
 <body>
 
 <div class="container-fluid">
@@ -28,11 +25,11 @@
                             <i class="fas fa-home me-2"></i> Мои модули
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">
                            <i class="fas fa-cog me-2"></i> Настройки
                         </a>
-                    </li>
+                    </li> -->
                      <li class="nav-item">
                         <a class="nav-link" href="login.html">
                            <i class="fas fa-sign-out-alt me-2"></i> Выйти
