скорректированный адаптив + неадаптив

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <div class="row g-0">
         <!-- Боковое меню -->
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse">
-            <div class="position-sticky pt-3">
-                <div class="sidebar-header justify-content-start align-items-center">
+            <div class="position-sticky pt-lg-3">
+                <div class="sidebar-header justify-content-center align-items-center p-lg-0">
                     <!-- Кнопка-бургер для закрытия меню на мобильных -->
-                    <div class="d-md-none align-items-center">
+                    <div class="burger-btn-in d-md-none align-items-center position-absolute">
                         <button class="navbar-toggler btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                             <i class="fas fa-bars"></i>
                         </button>
                     </div>
-                    <a class="quizrulet-brand-sidebar d-flex justify-content-center align-items-center mb-3" href="/">
+                    <a class="quizrulet-brand-sidebar d-flex justify-content-center align-items-center mb-lg-3" href="/">
                         <span class="text-success">Quiz</span><span class="text-secondary">RuLet</span>
                     </a>
                     
