--- a/registration.html
+++ b/registration.html
@@ -44,6 +44,6 @@
     <script>
         const helpPage = "./help/sozdanie_akkaunta.htm"; 
     </script>
-    <script src="help.js"></script>
+    <script src="./script/help.js"></script>
 </body>
 </html>
