--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
+<script src="./script/script.js"></script>
 <script>
     const helpPage = "./help/sozdanie_novogo_uchebnogo_modulya.htm"; 
 </script>
-<script src="help.js"></script>
+<script src="./script/help.js"></script>
 </body>
 </html>
