--- a/login.html
+++ b/login.html
@@ -37,6 +37,6 @@
     <script>
         const helpPage = "./help/avtorizatsiya_polzovatelya.htm"; 
     </script>
-    <script src="help.js"></script>
+    <script src="./script/help.js"></script>
 </body>
 </html>
