--- a/module.html
+++ b/module.html
@@ -18,9 +18,9 @@
         <a class="quizrulet-brand-sidebar d-flex p-4 " href="/">
             <span class="text-success">Quiz</span><span class="text-secondary">RuLet</span>
         </a>
-    </div>
-    <div class="module-name row">
-        <div class="name ">Название учебного модуля</div>
+        <div class="module-name">
+            <div class="name ">Название учебного модуля</div>
+        </div>
     </div>
     <div class="main d-flex min-vh-100 p-4 justify-content-evenly mt-5">
         <a class="btn-learn col-6" href="/"></a>
@@ -30,10 +30,10 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
+
 <script>
     const helpPage = "./help/.htm"; 
 </script>
-<script src="help.js"></script>
+<script src="./script/help.js"></script>
 </body>
 </html>
