--- a/module.html
+++ b/module.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Модуль Название - QuizRuLet</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/419f67953a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/module.css">
+    <link rel="stylesheet" href="./styles/module.css"> -->
+    <link rel="stylesheet" href="./styles/headers/header_module.css">
 </head>
 
 <body>
+<!-- header start -->
+    <header class="header">
+        <a href="#" class="logo">
+            <span class="quiz">Quiz</span><span class="rulet">Rulet</span>
+        </a>
+        <div class="central-container">
+            <h1 class="module-title<?= empty($ModuleNameFromDB) ? ' placeholder' : '' ?>">
+            </h1>
+        </div>
+  <!-- <div class="header-container">
+    <nav class="nav">
+      <button class="nav-toggle" type="button">
+        <i class="fas fa-bars"></i>
+      </button>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="#">Home</a></li>
+      </ul>
+    </nav>
+    <div class="search">
+      <button class="search-toggle">
+        <i class="fa-solid fa-magifying-glass>"></i>
+      </button>
+      <form action="" class="search-form">
+        <label for="search"></label>
+        <input type="search" id="search" placeholder="Search.." autocomplete="off">
+      </form>
+    </div>
+  </div> -->
+    
+ </header>
+<!-- header end -->
 
-<div class="container-fluid p-0">
+
+
+<!-- <div class="container-fluid p-0">
     <div class="logo row">
         <a class="quizrulet-brand-sidebar d-flex p-4 " href="/">
             <span class="text-success">Quiz</span><span class="text-secondary">RuLet</span>
@@ -34,6 +68,6 @@
 <script>
     const helpPage = "./help/.htm"; 
 </script>
-<script src="help.js"></script>
+<!-- <script src="help.js"></script> -->
 </body>
 </html>
