модальное окно универсальное + модал для редакта названия и описания модуля

--- a/login.html
+++ b/login.html
@@ -38,5 +38,6 @@
         const helpPage = "./help/avtorizatsiya_polzovatelya.htm"; 
     </script>
     <script src="./script/help.js"></script>
+    <script src="./script/modal.js"></script>
 </body>
 </html>
