--- a/module.html
+++ b/module.html
@@ -35,5 +35,6 @@
     const helpPage = "./help/.htm"; 
 </script>
 <script src="./script/help.js"></script>
+<script src="./script/modal.js"></script>
 </body>
 </html>
