--- a/registration.html
+++ b/registration.html
@@ -45,5 +45,6 @@
         const helpPage = "./help/sozdanie_akkaunta.htm"; 
     </script>
     <script src="./script/help.js"></script>
+    <script src="./script/modal.js"></script>
 </body>
 </html>
