--- a/card.html
+++ b/card.html
@@ -65,5 +65,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src = "./script/flip.js"></script>
 <script src="./script/help.js"></script>
+<script src="./script/modal.js"></script>
 </body>
 </html>
