--- a/module.html
+++ b/module.html
@@ -14,8 +14,9 @@
   <!-- Стили -->
   <link rel="stylesheet" href="./styles/headers/header_module.css">
   <link rel="stylesheet" href="./styles/mains/main_module.css">
+  <link rel="stylesheet" href="./styles/footer.css">
   <!-- Скрипты -->
-  <script src="scripts/headers_scripts/header_module.js"></script>
+  <script src="scripts/module/module.js"></script>
 </head>
 <!-- Добавить ссылки в header -->
 <body>
@@ -23,21 +24,21 @@
     <!-- header start -->
     <header class="header">
       <div class="header-top">
-        <a href="#" class="logo"> 
+        <a href="#" class="logo">                                                 <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
           <span class="quiz">Quiz</span><span class="rulet">Rulet</span>
         </a>
         <!-- Кнопки справа -->
         <nav class="nav">
           <ul class="nav-list">
-            <li class="nav-item">
-              <a href="#">
+            <li class="nav-item">   
+              <a href="#">                                        <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
                 <svg>
                   <use href="./icons/sprite.svg#IconModuleEdit" />
                 </svg>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#">
+              <a href="#">                                            <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
                 <svg>
                   <use href="./icons/sprite.svg#IconMainMenu"/>
                 </svg>
@@ -49,7 +50,7 @@
       <!-- Вторая строка: Название модуля по центру -->
       <div class="module-title-container">
         <h1 class="module-title placeholder" id="moduleTitle">
-          Учебный модуль
+          Учебный модуль                                           <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
         </h1>
       </div>
     </header>
@@ -57,96 +58,117 @@
 
     <!-- main start -->
     <main class="main">
-      <div class="left-column">
-        <div class="left-column-container">
-          <button class="learn-button">
-          <svg class="rocket-icon">
-            <use href="./icons/sprite.svg#IconRocket" />
-          </svg>
-          <span class="button-text">Учить</span>
+      <div class="top-main-part">
+          <!-- Ллевая часть - НАЧАЛО -->
+        <div class="left-column">
+          <div class="left-column-container">
+            <button class="learn-button">
+              <svg class="rocket-icon">
+                <use href="./icons/sprite.svg#IconRocket" />
+              </svg>
+              <span class="button-text">Учить</span>
+            </button>
+            <div class="description">
+              Описание...                                       <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
+            </div>
+          </div>
+        </div>
+  <!-- Ллевая часть - КОНЕЦ -->
+
+  <!-- Правая часть - НАЧАЛО -->
+        <div class="right-column">
+
+          <div class="right-column-countainer">
+
+  <!-- Прогресс бар - НАЧАЛО -->
+            <div class="progress-bar">
+              <p>Прогресс изучения</p>
+              <div class="progress-container">
+                <div class="progress">
+                  <div class="progress-fill" style="width: 50%;"></div>
+                </div>
+                <span class="progress-percent">50%</span>
+              </div>
+            </div>
+  <!-- Прогресс бар - КОНЕЦ -->
+
+  <!-- Отображение кол-ва карточек - НАЧАЛО -->
+          <div class="cards-count">
+            <div class="unknown-cards red">
+              <p>Стопка Не знаю <span id="unknown-count">...</span></p>
+            </div>
+            <div class="known-cards green">
+              <p>Стопка Знаю <span id="known-count">...</span></p>
+            </div>
+          </div>
+  <!-- Отображение кол-ва карточек - КОНЕЦ -->
+
+  <!-- Кнопка добавления новых карточек - НАЧАЛО -->
+          <button class="add-card-button">
+            <a href="#">                                         <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
+              <svg class="plus-icon">
+                <use href="./icons/sprite.svg#IconPlus" />
+              </svg>
+            </a>
+            <span class="add-button-text">Добавить новую карточку</span>
           </button>
-          <div class="description">
-            Описание...
+  <!-- Кнопка добавления новых карточек - КОНЕЦ -->
           </div>
         </div>
+  <!-- Правая часть - КОНЕЦ -->
       </div>
-      <div class="right-column">
-        <div class="right-column-countainer">
-          <div class="progress-bar">
-          <p>Прогресс изучения</p>
-          <div class="progress">
-            <div class="progress-fill" style="width: 50%;"></div>
-          </div>
+
+
+<!-- Карточки НЕ ЗНАЮ - НАЧЛО -->
+  <div class="card-list-UNKNOWN">
+    <h2 class="card-list-title">Не Знаю</h2>
+    <ul class="card-items">
+      <li class="card-item">
+        <span class="card-index">1.</span>
+        <div class="card-content">
+          <textarea class="card-term autoresize" placeholder="Терминааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааввввв  "></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
         </div>
-        <div class="cards-count">
-          <div class="unknown-cards red">
-            <p>Стопка Не знаю <span>0</span></p>
-          </div>
-          <div class="known-cards green">
-            <p>Стопка Знаю <span>0</span></p>
-          </div>
+      </li>
+      <li class="card-item">
+        <span class="card-index">2.</span>
+        <div class="card-content">
+          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
         </div>
-        <button class="add-card-button">
-          <svg class="plus-icon">
-            <use href="./icons/sprite.svg#IconPlus" />
-          </svg>
-          <span class="add-button-text">Добавить новую карточку</span>
-        </button>
+      </li>
+    </ul>
+  </div>
+<!-- Карточки НЕ ЗНАЮ - КОНЕЦ -->
+
+<!-- Карточки ЗНАЮ - НАЧЛО -->
+  <div class="card-list-KNOWN">
+    <h2 class="card-list-title">Знаю</h2>
+    <ul class="card-items">
+      <li class="card-item">
+        <span class="card-index">1.</span>
+        <div class="card-content">
+          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
         </div>
-      </div>
+      </li>
+      <li class="card-item">
+        <span class="card-index">2.</span>
+        <div class="card-content">
+          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
+        </div>
+      </li>
+    </ul>
+  </div>
+<!-- Карточки ЗНАЮ - КОНЕЦ -->
     </main>
     <!-- main end -->
-
-    <!-- fotter start -->
-    <footer class="footer">
-
-    </footer>
-    <!-- footer end -->
   </div>
-
-
-
-<!-- Скрипт -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
-<script>
-    const helpPage = "./help/.htm"; 
-</script>
-<script src="help.js"></script>
-<script>
-  function updateMainMargin() {
-    const header = document.querySelector('.header');
-    const main = document.querySelector('.main');
-    main.style.marginTop = `${header.offsetHeight}px`;
-  }
-
-  window.onload = updateMainMargin;
-  window.addEventListener('resize', updateMainMargin);
-</script>
+<!-- fotter start -->
+<footer class="footer">
+  <div class="footer-content">
+    <p class="footer-text">© 2025-QuizRulet</p>
+    <button class="support-button" href="#">Помощь</button>            <!--/*ДОБАВИТЬ ССЫЛКУ*/ -->
+  </div>
+</footer>
+<!-- footer end -->
 </body>
 </html>
-
-
-<!-- <div class="container-fluid p-0">
-    <div class="logo row">
-        <a class="quizrulet-brand-sidebar d-flex p-4 " href="/">
-            <span class="text-success">Quiz</span><span class="text-secondary">RuLet</span>
-        </a>
-    </div>
-    <div class="module-name row">
-        <div class="name ">Название учебного модуля</div>
-    </div>
-    <div class="main d-flex min-vh-100 p-4 justify-content-evenly mt-5">
-        <a class="btn-learn col-6" href="/"></a>
-        
-        <div class="progress-bar d-flex col-4"></div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
-<script>
-    const helpPage = "./help/.htm"; 
-</script>
-<!-- <script src="help.js"></script> -->
 
