--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script src="./script/script.js"></script>
     <script>
         const helpPage = "./help/sozdanie_novogo_uchebnogo_modulya.htm"; 
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
     <script src="./script/help.js"></script>
     <script src="./script/modal.js"></script>
 </body>
