Заменена иконка кнопки учить Добавлены иконки для удаления карточки Добавлена икона для создания новго набора Добавлена иконка для поиска

--- a/module.html
+++ b/module.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./styles/headers/header_module.css">
   <link rel="stylesheet" href="./styles/mains/main_module.css">
   <link rel="stylesheet" href="./styles/footer.css">
+  <link rel="site icon" type="png" href="./images/images.png">
   <!-- Скрипты -->
   <script src="scripts/module/module.js"></script>
 </head>
@@ -126,13 +127,13 @@
       <li class="card-item">
         <span class="card-index">1.</span>
         <div class="card-content">
-          <textarea class="card-term autoresize" placeholder="Терминааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааввввв  "></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
+          <textarea class="card-term autoresize"></textarea><textarea class="card-value autoresize"></textarea>
         </div>
       </li>
       <li class="card-item">
         <span class="card-index">2.</span>
         <div class="card-content">
-          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
+          <textarea class="card-term autoresize"></textarea><textarea class="card-value autoresize"></textarea>
         </div>
       </li>
     </ul>
@@ -146,13 +147,13 @@
       <li class="card-item">
         <span class="card-index">1.</span>
         <div class="card-content">
-          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
+          <textarea class="card-term autoresize"></textarea><textarea class="card-value autoresize"></textarea>
         </div>
       </li>
       <li class="card-item">
         <span class="card-index">2.</span>
         <div class="card-content">
-          <textarea class="card-term autoresize" placeholder="Термин"></textarea><textarea class="card-value autoresize" placeholder="Значение"></textarea>
+          <textarea class="card-term autoresize"></textarea><textarea class="card-value autoresize"></textarea>
         </div>
       </li>
     </ul>
