add some requests

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                     <label for="passwordInput" class="form-label">Пароль:</label>
                     <input type="password" class="form-control form-control-lg" id="passwordInput" placeholder="Введите пароль">
                 </div>
-                <button type="submit" class="btn btn-custom-login w-100 btn-lg mb-3">Войти</button>
+                <button type="submit" class="btn btn-custom-login w-100 btn-lg mb-3" id="submitLogin">Войти</button>
                 <div class="text-center register-link">
                     <a href="registration.html">У вас нет аккаунта? Зарегистрироваться</a>
                 </div>
@@ -39,5 +39,6 @@
     </script>
     <script src="./script/help.js"></script>
     <script src="./script/modal.js"></script>
+    <script src = "./script/login_reg.js"></script>
 </body>
 </html>
