--- a/registration.html
+++ b/registration.html
@@ -32,7 +32,7 @@
                     <label for="passwordConfirmInput" class="form-label">Повторите пароль:</label>
                     <input type="password" class="form-control form-control-lg" id="passwordConfirmInput" placeholder="Повторите пароль">
                 </div>
-                <button type="submit" class="btn btn-custom-register w-100 btn-lg mb-3">Создать аккаунт</button>
+                <button type="submit" class="btn btn-custom-register w-100 btn-lg mb-3" id="submitRegister">Создать аккаунт</button>
                  <div class="text-center login-link">
                     <a href="login.html">Уже есть аккаунт? Войти</a>
                 </div>
@@ -46,5 +46,6 @@
     </script>
     <script src="./script/help.js"></script>
     <script src="./script/modal.js"></script>
+    <script src = "./script/login_reg.js"></script>
 </body>
 </html>
