--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </a>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
-                                <i class="fa-regular fa-user me-2"></i>Username
+                            <a class="nav-link active" aria-current="page" href="#" id="username">
+                                <i class="fa-regular fa-user me-2"></i>
                             </a>
                         </li>
 
@@ -62,70 +62,7 @@
                 </div>
 
                 <div class="module-list pt-3 pb-2 mb-3"> <!--нижний блок-->
-                    <div class="module-card d-flex justify-content-between align-items-center flex-wrap">
-                        <div class="module-title mb-2 mb-md-0">
-                            <a class="module-name-link" href="module.html">
-                                Учебный модуль 1
-                            </a>
-                        </div>
-                        <div class="module-info d-flex align-items-center mb-2 mb-md-0 me-md-3">
-                            <span class="me-3">Карточек: 15</span>
-                            <div class="progress me-2" style="width: 100px;">
-                                <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <span>30%</span>
-                        </div>
-                        <div class="dropdown module-actions">
-                            <button class="btn btn-menu" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-share-alt me-2"></i>
-                                        Поделиться</a></li>
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-edit me-2"></i> Редактировать</a>
-                                </li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-trash-alt me-2"></i>
-                                        Удалить</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="module-card d-flex justify-content-between align-items-center flex-wrap">
-                        <div class="module-title mb-2 mb-md-0">
-                            <a class="module-name-link" href="module.html">
-                                Модуль по Истории
-                            </a>
-                        </div>
-                        <div class="module-info d-flex align-items-center mb-2 mb-md-0 me-md-3">
-                            <span class="me-3">Карточек: 50</span>
-                            <div class="progress me-2" style="width: 100px;">
-                                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <span>75%</span>
-                        </div>
-                        <div class="dropdown module-actions">
-                            <button class="btn btn-menu" type="button" id="dropdownMenuButton2"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v"></i>
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton2">
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-share-alt me-2"></i>
-                                        Поделиться</a></li>
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-edit me-2"></i> Редактировать</a>
-                                </li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-trash-alt me-2"></i>
-                                        Удалить</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    
                 </div>
             </main>
         </div>
@@ -153,7 +90,7 @@
         </div>
     </div>
     
-    <script src="./script/script.js"></script>
+    <script src="./script/index.js"></script>
     <script>
         const helpPage = "./help/sozdanie_novogo_uchebnogo_modulya.htm"; 
     </script>
