--- a/module_edit.html
+++ b/module_edit.html
@@ -71,7 +71,7 @@
 
 
                     <div class="module-name " data-bs-toggle="tooltip" data-bs-placement="top"
-                        title="Это описание учебного модуля. Здесь может быть несколько строк текста. Например, вы можете указать темы, которые он охватывает, уровень сложности, количество карточек и другую полезную информацию." >
+                        title="Это описание учебного модуля. Здесь может быть несколько строк текста. Например, вы можете указать темы, которые он охватывает, уровень сложности, количество карточек и другую полезную информацию.">
                         Название учебного модуля
                         <i class="fa-solid fa-pen ms-2" data-bs-toggle="modal" data-bs-target="#editModal"></i>
                     </div>
@@ -165,7 +165,7 @@
                         <option value=",">Запятая</option>
                         <option value="\t">Таб</option>
                     </datalist>
-
+                    <p class="mt-3">Выберите, как вы хотите разделить строки:</p>
                     <input list="separators_line" class="form-control mt-3" id="separator_line" name="separator_line"
                         placeholder="Введите или выберите разделитель">
 
@@ -230,8 +230,7 @@
     </div>
 
     <!-- Модальное окно для редактирования названия и описания модуля -->
-    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModuleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModuleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -266,10 +265,10 @@
         })
     </script>
 
-    <script src="./script/main.js"></script>
+    <script src="./script/edit_module.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script/modal.js"></script>
-    <script src="./script/edit_name_module.js"></script>    
+    <script src="./script/edit_name_module.js"></script>
 </body>
 
 </html>
