--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="module-list pt-3 pb-2 mb-3"> <!--нижний блок-->
-                    
+
                 </div>
             </main>
         </div>
@@ -89,12 +89,13 @@
             </div>
         </div>
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script/index.js"></script>
     <script>
         const helpPage = "./help/sozdanie_novogo_uchebnogo_modulya.htm"; 
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script/help.js"></script>
     <script src="./script/modal.js"></script>
 </body>
